--- a/stack.yaml
+++ b/stack.yaml
@@ -16,6 +16,9 @@ flags: {}
 # Extra package databases containing global packages
 extra-package-dbs: []
 
+ghc-options: 
+  Multiclass: -threaded
+
 # Control whether we use the GHC we find on the path
 # system-ghc: true
 
