enable -Wall and fix some warnings

--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@ flags: {}
 extra-package-dbs: []
 
 ghc-options: 
-  Multiclass: -threaded
+  Multiclass: -threaded -Wall
 
 # Control whether we use the GHC we find on the path
 # system-ghc: true
